add new section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,58 @@
 </div>
 
 
+<div class="container">
+
+  <div class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c gap-16">
+    <div class="flex-jsb-c gap-6 h-full w-[40%]">
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        <img src="img/icons/like-blue.svg" alt="like-blue.svg">
+        Подарочные сертификаты
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        <img src="img/icons/percent.svg" alt="percent">
+        Скидки
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        <img src="img/icons/star-lik.svg" alt="star-lik">
+        Новинки
+      </a>
+    </div>
+
+    <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+    <div class="flex-jsb-c gap-6 h-full w-[60%]">
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        Удилища
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        Катушки
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        Приманки
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        Аксессуары
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        Оснастка
+      </a>
+      <a href="#" class="flex-js-c gap-2 text-black text-[18px] font-medium">
+        Экипировка
+      </a>
+    </div>
+
+  </div>
+
+  <div class="w-full h-[570px] rounded-[24px] overflow-hidden">
+    <div class="w-full h-[570px] relative">
+        <h2 class="font-lena">Акция к летнему сезону!</h2>
+    </div>
+  </div>
+
+
+</div>
+
+
 <script src="js/script.js"></script>
 </body>
 </html>
