--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/output.css">
-  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
+  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="css/output.css">
 
   <script src="js/aos.js"></script>
-  <title>Kettik Hotel</title>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <title>Fishemania</title>
 </head>
 <body>
 
