--- a/index.html
+++ b/index.html
@@ -829,6 +829,13 @@
     </div>
   </div>
 
+  <div class="mb-[70px] min-h-[420px] py-[50px] pl-[50px] rounded-[16px] bg-[#F4F4F4] relative">
+    <h2 class="font-lena max-w-[700px] mb-[20px] font-normal text-[#336B46] text-[64px] leading-[100%]">Сапоги для рыбаков со скидкой 25%!</h2>
+    <p class="max-w-[650px] text-[20px] text-[#323232] leading-[110%]">Летний сезон в самом разгаре, это значит стартует наша акция.
+       Купи товаров на 25 000 рублей и получи скидку 10% на следующую покупку</p>
+       <img src="img/valinki.png" alt="" class="absolute top-0 right-[140px]">
+  </div>
+
  
 </div>
 
