--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
   </div>
 
 
-  <div class="w-full mb-[70px] relative z-0">
+  <div class="w-full mb-[70px] mt-[70px] relative z-0">
 
     <div class="swiper-button-prev info-slider w-[60px] h-[60px] text-[20px] bg-white/50 backdrop-blur-[7.5px] rounded-[8px] after:text-[20px] after:text-black after:content-['prev'] ml-[-35px] transition hover:bg-white/80"></div>
     <div
@@ -1275,7 +1275,7 @@
     </div>
   </div>
 
-  <div class="w-full h-auto mt-[70px]">
+  <div class="w-full h-auto mt-[70px] mb-[70px]">
 
     <div class="w-full flex-jsb-c mb-6">
       <div class="flex-js-c gap-4">
@@ -2247,59 +2247,52 @@
         <h3 class="text-[32px]">Новости и статьи</h3>
       </div>
       <div class="popular-navigation flex-je-c relative gap-2">
-        <div class="swiper-button-prev brand after:text-[20px] after:text-black after:content-['prev'] w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-89dc9c6afa3e639e"></div>
-        <div class="swiper-button-next brand transition after:text-[20px] after:text-black after:content-['next'] w-[42px] h-[42px] rounded-[8px] border border-[#6E6E6E]/25 static hover:border-black" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-89dc9c6afa3e639e"></div>
+        <div class="swiper-button-prev news after:text-[20px] after:text-black after:content-['prev'] w-[42px] h-[42px] rounded-[8px] transition border border-[#6E6E6E]/25 static hover:border-black" tabindex="0" role="button" aria-label="Previous slide" aria-controls="swiper-wrapper-89dc9c6afa3e639e"></div>
+        <div class="swiper-button-next news transition after:text-[20px] after:text-black after:content-['next'] w-[42px] h-[42px] rounded-[8px] border border-[#6E6E6E]/25 static hover:border-black" tabindex="0" role="button" aria-label="Next slide" aria-controls="swiper-wrapper-89dc9c6afa3e639e"></div>
       </div>
     </div>
 
 
-    <div class="flex-js-c gap-4">
+    <div class="flex-js-c gap-4 mb-6">
       <button class="px-6 h-[52px] bg-blue text-white text-[18px] rounded-[30px]">Новости</button>
+      <button class="px-6 h-[52px] bg-[#F0F0F0] text-black text-[18px] rounded-[30px]">Статьи</button>
     </div>
 
 
 
-    <div class="swiper swiperPartners">
+    <div class="swiper swiperNews">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/brand-1.png" alt="brand-1">
-         </div>
+          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+            <img src="img/news.png" alt="new" class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
+            <div class="absolute top-0 left-0 p-4 bg-black/30 text-white flex-js-e text-[18px] w-full h-full leading-[auto]">
+              Летняя рыбалка: все что надо знать, но вы могли пропустить
+            </div>
+          </div>
         </div>
         <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partner-2.png" alt="brand-1">
-         </div>
+          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+            <img src="img/news-2.jpg" alt="new" class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
+            <div class="absolute top-0 left-0 p-4 bg-black/30 text-white flex-js-e text-[18px] w-full h-full leading-[auto]">
+              Летняя рыбалка: все что надо знать, но вы могли пропустить
+            </div>
+          </div>
         </div>
         <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partner-3.png" alt="brand-1">
-         </div>
+          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+            <img src="img/news-3.jpg" alt="new" class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
+            <div class="absolute top-0 left-0 p-4 bg-black/30 text-white flex-js-e text-[18px] w-full h-full leading-[auto]">
+              Летняя рыбалка: все что надо знать, но вы могли пропустить
+            </div>
+          </div>
         </div>
         <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partnet-4.png" alt="brand-1">
-         </div>
-        </div>
-        <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partner-5.png" alt="brand-1">
-         </div>
-        </div>
-        <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partner-6.png" alt="brand-1">
-         </div>
-        </div>
-        <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partner-7.png" alt="brand-1">
-         </div>
-        </div>
-        <div class="swiper-slide">
-         <div class="w-full h-[150px] px-4 border rounded-[8px] flex-jc-c transition hover:border-black">
-           <img src="img/partners/partner-7.png" alt="brand-1">
-         </div>
+          <div class="w-full h-[405px] relative rounded-[12px] overflow-hidden group">
+            <img src="img/news-4.jpg" alt="new" class="w-full h-full object-cover transform group-hover:scale-[1.05] transition">
+            <div class="absolute top-0 left-0 p-4 bg-black/30 text-white flex-js-e text-[18px] w-full h-full leading-[auto]">
+              Летняя рыбалка: все что надо знать, но вы могли пропустить
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -2310,6 +2303,193 @@
 </div>
 
 
+
+
+<footer class="bg-[#262626] mt-[250px]">
+  <div class="container">
+    <div class="w-full h-[320px] relative transform translate-y-[-50%]">
+      <img src="img/contact-me-bg.png" alt="contact-me-bg" class="w-full h-full object-cover rounded-[16px]">
+      <img src="img/message-ilustriator.png" alt="message-ilustriator" class="absolute left-[17%] top-[-100px]">
+      <div class="absolute top-[50%] right-[70px] transform translate-y-[-50%]">
+        <h3 class="font-light text-[64px] text-white">Подпишись на рассылку</h3>
+        <p class="text-white">Получай наши новости, акции, советы и рекомендации экспертов</p>
+        <form action="#" class="w-full flex-jsb-c gap-4 mt-4">
+          <label class="w-full h-[54px] bg-white overflow-hidden rounded-[8px]">
+            <input type="text" placeholder="Ваша почта" class="w-full h-full pl-6">
+          </label>
+          <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+            Подписаться
+          </button>
+        </form>
+      </div>
+    </div>
+
+
+    <div class="w-full grid grid-cols-12 gap-10 mt-[-60px]">
+      <div class="col-span-2">
+        <img src="img/logo-footer.svg" alt="logo-footer" class="mt-[-20px]">
+        <div class="flex-js-c gap-2 text-white mt-4">
+          Ваш город
+          <img src="img/icons/location.svg" alt="location">
+          <div class="text-white flex-js-c gap-2 cursor-pointer">
+            г. Москва
+            <img src="img/icons/down.svg" alt="">
+          </div>
+        </div>
+        <div class="flex-js-c gap-4 mt-4">
+          <a href="#">
+            <img src="img/icons/whats-app.svg" alt="whats-app">
+          </a>
+          <a href="#">
+            <img src="img/icons/tg.svg" alt="tg">
+          </a>
+        </div>
+      </div>
+
+      <div class="col-span-4">
+        <h4 class="text-white text-[20px] mb-4">Каталог</h4>
+        <div class="flex-jsb-s gap-[60px]">
+          <ul>
+            <li>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Удилища
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Катушки
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Приманки
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Оснастка
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Зимняя рыбалка
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Одежда и обувь
+              </a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Электроника
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Аксессуары
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Туризм
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Скидки
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Сертификаты
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-span-2">
+        <h4 class="text-white text-[20px] mb-4">Сервис</h4>
+        <div class="flex-jsb-s gap-[60px]">
+          <ul>
+            <li>
+              <a href="#" class="text-white opacity-80 mb-2">
+                О магазине
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Доставка и оплата
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Подарочные карты
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Скидки
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Новости
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Сервис и гарантии
+              </a>
+              <a href="#" class="text-white opacity-80 mb-2">
+                Контакты
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+
+      <div class="col-span-2">
+
+        <ul>
+          <li>
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+              <img src="img/icons/favorite.svg" alt="favorite" class="mr-2">
+              Избранное
+            </a>
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+              <img src="img/icons/rows-white.svg" alt="rows-white" class="mr-2">
+              Сравнения
+            </a>
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+              <img src="img/icons/basket-white.svg" alt="basket-white" class="mr-2">
+              Корзина
+            </a>
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+              <img src="img/icons/login-account.svg" alt="login-account" class="mr-2">
+              Регистрация и вход
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+
+      <div class="col-span-2">
+        <h4 class="text-white text-[20px] mb-4">Контакты</h4>
+
+        <a href="tel: 8 (800) 101-86-53" class="text-white font-bold">
+          8 (800) 101-86-53
+        </a>
+        <a href="tel: 8 (800) 101-86-53" class="text-white font-bold mb-4">
+          8 (921) 903-53-50
+        </a>
+
+        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 mb-4">
+          Обратный звонок
+        </button>
+
+        <a href="mailto: fishemania777@yandex.ru" class="text-blue underline mb-4">
+          fishemania777@yandex.ru
+        </a>
+
+        <p class="text-[14px] text-white opacity-80">
+          пн-пт, 10:00 - 20:00, прием заказов на сайте круглосуточно
+        </p>
+      </div>
+
+
+    </div>
+
+
+  </div>
+
+  <div class="w-full h-[1px] bg-white mt-6"></div>
+
+  <div class="container">
+    <div class="w-full h-[54px] flex-jsb-c">
+      <p class="text-[14px] text-white opacity-80">Информация, размещенная на сайте, не является публичной офертой.</p>
+      <p class="text-[14px] text-white opacity-80">© 2005–2025. Все права защищены</p>
+    </div>
+  </div>
+
+</footer>
  
 <script src="js/script.js"></script>
 </body>
